<resources>
    <string name="action_settings">Settings</string>
    <string name="payload">Payload</string>
    <string name="content">Content</string>
    <string name="sample_title">Sample Title</string>
    <string name="message_status">Message Status</string>
    <string name="sdk_version_text">OpenBack SDK Version is %1$s</string>
    <string name="open_app_inbox">Open App Inbox</string>
    <string name="check_messages_now">Check Messages Now</string>
    <string name="save_user_attributes">Save User Attributes</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="set_custom_segment_3_to_1_12">Set Custom Segment 3 to 1.12</string>
    <string name="set_custom_segment_2_to_42">Set Custom Segment 2 to 42</string>
    <string name="set_custom_segment_1_to_bob">Set Custom Segment 1 to Bob</string>
    <string name="openback">OpenBack</string>
</resources>
