<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/messageConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/inboxMessageRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/message_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contentLinearLayout"
        app:srcCompat="@drawable/baseline_email_24" />

    <ImageView
        android:id="@+id/inboxMessageActionable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/message_status"
        app:layout_constraintBottom_toBottomOf="@+id/contentLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contentLinearLayout"
        app:layout_constraintTop_toTopOf="@+id/contentLinearLayout"
        app:srcCompat="@drawable/baseline_flash_on_24" />

    <LinearLayout
        android:id="@+id/contentLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inboxMessageActionable"
        app:layout_constraintStart_toEndOf="@+id/inboxMessageRead"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/inboxMessageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/sample_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/inboxMessageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/inboxMessagePayload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:padding="3dp"
            android:text="@string/payload"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>